force-app/main/default/objects/Animal__c/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <description>Birth date of the animal</description>
    <inlineHelpText>Birth date of the animal</inlineHelpText>
    <label>Birth Date</label>
    <type>Date</type>
</CustomField>