force-app/main/default/objects/Animal__c/fields/Breed__c.field-meta.xml
<CustomField>
    <fullName>Breed__c</fullName>
    <description>Breed of the animal</description>
    <inlineHelpText>Breed of the animal</inlineHelpText>
    <label>Breed</label>
    <length>50</length>
    <type>Text</type>
</CustomField>