force-app/main/default/objects/Animal__c/fields/DeathDate__c.field-meta.xml
<CustomField>
    <fullName>DeathDate__c</fullName>
    <description>Death date of the animal</description>
    <inlineHelpText>Death date of the animal</inlineHelpText>
    <label>Death Date</label>
    <type>Date</type>
</CustomField>