force-app/main/default/objects/Animal__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <description>Unique animal identification number</description>
    <displayFormat>A-{000000}</displayFormat>
    <inlineHelpText>Unique animal identification number</inlineHelpText>
    <label>ID</label>
    <type>AutoNumber</type>
</CustomField>