force-app/main/default/objects/Animal__c/fields/Species__c.field-meta.xml
<CustomField>
    <fullName>Species__c</fullName>
    <description>Animal species (dog,cat,bird,reptile,fish,other)</description>
    <inlineHelpText>Animal species (dog,cat,bird,reptile,fish,other)</inlineHelpText>
    <label>Species</label>
    <length>50</length>
    <type>Text</type>
</CustomField>