force-app/main/default/objects/Animal__c/fields/Vaccinated__c.field-meta.xml
<CustomField>
    <fullName>Vaccinated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box that captures if the animal has been vaccinated</description>
    <inlineHelpText>Check box that captures if the animal has been vaccinated</inlineHelpText>
    <label>Vaccinated</label>
    <type>Checkbox</type>
</CustomField>